solved complex grid layout but with some edge case overflow issues

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,11 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 80px 50px 1fr 50px;
+  gap: 4px;
+
 }
 
 .container div {
@@ -17,6 +22,11 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  
 }
 
 .menu ul,
@@ -24,8 +34,20 @@
   font-size: 16px;
 }
 
+.menu ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
 .sidebar {
   background-color: #C50208;
+  grid-column: 1/2;
+  grid-row: 2/-2;
+
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -46,6 +68,8 @@
 
 .nav {
   background-color: #C50208;
+  grid-row: 2/3;
+  grid-column: 2/3;
 }
 
 .nav ul li {
@@ -53,8 +77,19 @@
   text-transform: uppercase;
 }
 
+.nav ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .article {
   background-color: #bccbde;
+  grid-row: 3/-2;
+  grid-column: 2/3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -66,6 +101,7 @@
 
 .article .card {
   background-color: #FFFFFF;
+  height: 200px;
   color: black;
   text-align: center;
 }
@@ -83,6 +119,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
 
 .footer p {
